delete deadline + dueDatePresents
