# api/views/catalogs.py
@@ -1,14 +1,20 @@
 from rest_framework import viewsets
 
-from issues.models import IssuePriority, IssueSeverity, IssueStatus, IssueTag, IssueType
+from issues.models import DueDatePreset, IssuePriority, IssueSeverity, IssueStatus, IssueTag, IssueType
 
 from api.serializers.catalogs import (
+    DueDatePresetSerializer,
     IssuePrioritySerializer,
     IssueSeveritySerializer,
     IssueStatusSerializer,
     IssueTagSerializer,
     IssueTypeSerializer,
 )
+
+
+class DueDatePresetViewSet(viewsets.ModelViewSet):
+    queryset = DueDatePreset.objects.all()
+    serializer_class = DueDatePresetSerializer
 
 
 class IssueStatusViewSet(viewsets.ModelViewSet):
